# egyptian_dialect_store

./: README.md  init_cuisine_store.py  pyproject.toml  test_vector_store.py
lancedb/egyptian_culture_nuances.lance/_transactions/: 0-b89ef829-2f5e-45bd-ab8d-64a7e981bf99.txn  1-fe905bc7-f8de-46e8-b5e6-74d12468708c.txn
lancedb/egyptian_culture_nuances.lance/data/: 0433b960-3ecf-405a-af8b-9a5a4433c14f.lance
lancedb/egyptian_culture_nuances_en.lance/_transactions/: 0-4ea7864e-aac8-449c-aa1f-002a57668210.txn  1-5ba0fa42-2e54-40c4-874e-8380ce38f11f.txn
lancedb/egyptian_culture_nuances_en.lance/data/: 8600a4cf-6faa-49e9-b9a1-d08bc68097e9.lance
