[tool.poetry]
name = "egyptian-dialect-store"
version = "0.1.0"
description = ""
authors = ["Kirill Chirkunov <kirill.chirkunov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
anthropic = "^0.39.0"
langchain = "^0.3.7"
langchain-community = "^0.3.5"
lancedb = "^0.15.0"
pandas = "^2.2.3"
openai = "^1.54.3"
rank-bm25 = "^0.2.2"
huggingface-hub = "^0.26.2"
langchain-openai = "^0.2.6"
python-dotenv = "^1.0.1"
pypdf = "^5.1.0"
wikipedia = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
